# G-Assist

./: .gitattributes  .gitignore  PLUGIN_FIXES_NEEDED.md  PLUGIN_MIGRATION_GUIDE_V2.md  README.md
api/bindings/python/: .gitignore  README.md  build_desktop_direct.py  build_desktop_exe.py  requirements.txt  rise-gui-desktop-direct.py  rise-gui-desktop-launcher.py  rise-gui.py  setup.py
api/c++/: .gitignore  API_REFERENCE.md  DOCS_OVERVIEW.md  INTEGRATION.md  README.md  audio_utils.h  download_nvapi_files.ps1  gassist_cli.cpp  gassist_cli.vcxproj  main.cpp  rise_demo_client.sln  rise_demo_client.vcxproj
plugins/access-stock-tonic/: .env.example  .gitignore copy  README copy.md  README.md  auto_color_update_loop.py  gradio_app.py  manifest.json  plugin.py  requirements copy.txt  requirements.txt
plugins/access-stock-tonic/tests/: test_calendar_tool.py  test_keyboard_color.py  test_predictions.py
plugins/examples/: BUILD_AND_DEPLOY_README.md  build_and_deploy_all.bat  build_and_deploy_all.ps1  setup.bat
plugins/examples/asus/: AsusFanControl.cpp  AsusFanControl.h  AsusInfo.cpp  AsusInfo.h  AsusPlugin.cpp  AsusPlugin.h  DMI.cpp  DMI.h  ThirdPartyLibs LICENSE.txt  WSClient.cpp  WSClient.h  asus.sln  asus.vcxproj  main.cpp  manifest.json  packages.config
plugins/examples/hello-world-cpp/: CMakeLists.txt  README.md  manifest.json  plugin.cpp
plugins/plugin-builder/: README.md  setup.bat
plugins/plugin_emulator/: ATTRIBUTIONS.md  README.md  __init__.py  __main__.py  cli.py  engine.py  manager.py  manifest.py  plugin.py  protocol.py  requirements.txt  test_example_plugin.json  validator.py  watcher.py
(+167 files in other folders)
